--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,10 +1,28 @@
 .container {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+}
+
+.logincontainer {
+  background-color: rgb(250, 247, 243, .6);
+  box-shadow:  3px 3px 3px 3px rgb(211, 207, 207);
+  border: .2px solid rgb(233, 212, 212);
+  border-radius: 2%;
+  height: 70%;
+  width: 75%;
+  display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  margin-bottom: 50px;
+
 }
+
+
+
+
 
 .label,
 .button {
