--- a/src/components/TodoList/TodoList.module.css
+++ b/src/components/TodoList/TodoList.module.css
@@ -1,4 +1,5 @@
 
+/* Empty list css ⬇️⬇️⬇️⬇️ */
 
 .emptylist {
  display: grid;
@@ -44,3 +45,54 @@
     font-weight: 400;
     font-size: 1.5em;
 }
+
+
+/* Empty list css  ⬆️⬆️⬆️⬆️ */
+
+/* List css ⬇️⬇️⬇️⬇️ */
+
+
+.listcontainer {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.4em;
+    justify-content: center;
+    overflow: hidden;
+    
+}
+
+.todocard {
+    background-color: white;
+    box-shadow:  3px 3px 3px 3px rgb(211, 207, 207);
+    border: .2px solid rgb(233, 212, 212);
+    text-align: center;
+    width: 20%;
+    height: auto;
+    border-radius: 3%;
+    display: flex;
+    justify-content: center;
+    
+}
+
+.todocard:hover {
+    background-color: rgb(66, 64, 64);
+    color: gray;
+}
+
+.title {
+    color: grey;
+    font-size: 2.5rem;
+    
+}
+
+.date {
+    font-size: 1.3rem;
+    color: grey;
+    
+}
+
+.content {
+    color: grey;
+}
+
