--- a/src/components/SignupForm/SignupForm.module.css
+++ b/src/components/SignupForm/SignupForm.module.css
@@ -1,9 +1,29 @@
 .container {
   display: flex;
-  flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  margin-bottom: 50px;
+  height: 100vh;
+  width: 100%;
+  overflow: scroll;
+}
+
+.signupcontainer {
+  background-color: rgb(250, 247, 243, .6);
+  box-shadow:  3px 3px 3px 3px rgb(211, 207, 207);
+  border: .2px solid rgb(233, 212, 212);
+  border-radius: 2%;
+  height: 70%;
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  color: gray;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.h1header {
+  padding-bottom: 2rem;
 }
 
 .label,
