--- a/src/components/TodoList/TodoList.module.css
+++ b/src/components/TodoList/TodoList.module.css
@@ -4,7 +4,6 @@
 .emptylist {
     display: flex;
     flex-direction: column;
-    overflow: scroll;
 }
 
 .h1div{
@@ -80,7 +79,7 @@ padding-bottom: 2rem;
     flex-wrap: wrap;
     gap: 1.4em;
     justify-content: center;
-    overflow: hidden;
+    overflow: scroll;
     
 }
 
@@ -89,12 +88,13 @@ padding-bottom: 2rem;
     box-shadow:  3px 3px 3px 3px rgb(211, 207, 207);
     border: .2px solid rgb(233, 212, 212);
     text-align: center;
-    width: 20%;
-    flex-basis: 50%;
-    max-height: 50%;
+    width: 20rem;
+    height: 15rem;
+    flex-grow: 1;
     border-radius: 3%;
     display: flex;
     justify-content: center;
+    
     
 }
 
