--- a/src/pages/EditTodo/EditTodo.module.css
+++ b/src/pages/EditTodo/EditTodo.module.css
@@ -4,10 +4,10 @@
     align-items: center;
     height: 100vh;
     width: 100%;
+    gap: .5em;
   }
 
-
-  .todocontainer {
+  .edittodocontainer {
     background-color: rgb(250, 247, 243, .6);
     box-shadow:  3px 3px 3px 3px rgb(211, 207, 207);
     border: .2px solid rgb(233, 212, 212);
@@ -16,17 +16,8 @@
     width: 75%;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
-    color: gray;
-    justify-content: center;
+    gap: 5rem;
+    padding-top: 8rem;
     align-items: center;
-    
-  }
-
-  
-
-
-  .buttons {
-    display: flex;
-    gap: .5rem;
+    color: gray;
   }
